[package]
name = "extrL"
version = "0.1.0"
edition = "2021"
description = "Download a Solana program's on-chain Anchor IDL"
license = "MIT"
repository = "https://github.com/NusaSec/extrL"
readme = "README.md"

[[bin]]
name = "extrL"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
bs58 = "0.5"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
curve25519-dalek = "4.1.3"
flate2 = "1"
serde_json = "1"
sha2 = "0.10"
ureq = { version = "2", features = ["json"] }

[profile.release]
strip = true
lto = true
